<resources>
    <string name="api_recognition">Radio Playlist Generated by Echo Nest, audio tracks provided by Spotify</string>
    <string name="app_name">HowToCS496</string>
    <string name="action_settings">Settings</string>
    <string name="main_button_pause">Pause</string>
    <string name="main_button_next">Next Song</string>
    <string name="main_input_artist">Enter Artist Here</string>
    <string name="main_submit_playlist">Create Radio Station</string>
    <string name="response_text">Please enter an artist to start a radio playlist</string>
</resources>
